--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,18 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+
+    ext.androidx_version = '1.0.0-beta01'
+    ext.androidx_testrunner_version = '1.1.0-alpha3'
+    ext.constraintlayout_version = '1.1.0'
+    ext.espresso_version = '3.1.0-alpha3'
     
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.3'
+        classpath 'com.android.tools.build:gradle:3.3.0-alpha03'
         
 
         // NOTE: Do not place your application dependencies here; they belong
