--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
-    buildToolsVersion "27.0.3"
+    buildToolsVersion "28.0.3"
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.gsnathan.compass"
@@ -23,13 +23,13 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     //AndroidX Libraries
-    implementation "androidx.appcompat:appcompat:$androidx_version"
-    implementation "com.google.android.material:material:$androidx_version"
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.2'
-    implementation "androidx.preference:preference:$androidx_version"
-    implementation "androidx.cardview:cardview:$androidx_version"
-    androidTestImplementation "androidx.test:runner:$androidx_testrunner_version"
-    androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_version"
+    implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'com.google.android.material:material:1.1.0-alpha01'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'androidx.test:runner:1.1.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
 
     testImplementation 'junit:junit:4.12'
 
