--- a/build.gradle
+++ b/build.gradle
@@ -2,17 +2,12 @@
 
 buildscript {
 
-    ext.androidx_version = '1.0.0-beta01'
-    ext.androidx_testrunner_version = '1.1.0-alpha3'
-    ext.constraintlayout_version = '1.1.0'
-    ext.espresso_version = '3.1.0-alpha3'
-    
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.0-alpha03'
+        classpath 'com.android.tools.build:gradle:3.2.1'
         
 
         // NOTE: Do not place your application dependencies here; they belong
